Add optional password protection with HTTP Basic Auth
- Add APP_PASSWORD environment variable
- Create auth middleware using HTTP Basic Authentication
- Password protection is optional (disabled if APP_PASSWORD not set)
- Health check endpoint always accessible
- Simple username/password login (username can be anything)

--- a/cot-backend/.env.example
+++ b/cot-backend/.env.example
@@ -11,6 +11,9 @@ NODE_ENV=development
 # JWT
 JWT_SECRET=your-secret-key-change-in-production
 
+# App Password Protection (Optional - leave empty to disable)
+APP_PASSWORD=
+
 # CORS
 FRONTEND_URL=http://localhost:3000
 
