--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,12 @@ NODE_ENV=development
 # --- Security ---
 JWT_SECRET=dev-secret-change-in-production-use-random-string
 
+# --- App Password Protection (Optional) ---
+# Leave empty to disable password protection
+# Set a password to require HTTP Basic Auth for the entire app
+# Example: APP_PASSWORD=mySecurePassword123
+APP_PASSWORD=
+
 # --- Frontend URL (for CORS) ---
 FRONTEND_URL=http://localhost:3000
 
