--- a/cot-backend/package.json
+++ b/cot-backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "tsx src/scripts/railway-init.ts && node dist/server.js",
+    "start:prod": "node dist/server.js",
     "test": "jest",
     "lint": "eslint src --ext .ts",
     "init-db": "tsx src/scripts/init-db.ts",
